--- a/out.html
+++ b/out.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.rtl.min.css" integrity="sha384-gXt9imSW0VcJVHezoNQsP+TNrjYXoGcrqBZJpry9zJt8PCQjobwmhMGaDHTASo9N" crossorigin="anonymous">
         <style> 
           :lang(ar) {
-            font-family: Scheherazade New, serif;
+            font-family: "Amiri", serif;
           }
           .container {
             max-width: 400px;
@@ -416,5 +416,140 @@
 <div class="row justify-content-around"><div class="col-auto">آجِلًا أَوْ عَاجِلًا</div><div class="col" lang="en" dir="ltr"></div></div>
 <div class="row justify-content-around"><div class="col-auto">مَأْجَل المَاء جـ. مَآجِلُ</div><div class="col" lang="en" dir="ltr"></div></div>
 <div class="row justify-content-around"><div class="col-auto">مُؤَجَّل</div><div class="col" lang="en" dir="ltr"></div></div>
-<div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto"><b>«ءجم»</b></div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">I أَجَمَ ◌ِ (أَجْم ، أَجِيم) ، V تَأَجَّمَ</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">V تَأَجَّمَ على</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">أَجَمَة جـ. أَجَم ، أَجَمَات ، آجَام</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">أَجْم</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">أُجُم جـ. آجَام</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto"><b>«ءجن»</b></div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">I أَجَنَ ◌ُ ◌ِ (أَجْن ، أُجُون) ، أَجِنَ ◌َ (أَجَن)</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">آجَنَ (أَجْن)</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">إِجَّانَة جـ. أَجَاجِينُ</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">مِئْجَنَة جـ. مَآجِنُ</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto"><b>«ءح»</b></div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">I أَحَّ ◌ُ (أَحّ)</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">أُحَاح</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">أُحَاح ، أَحِيح ، أَحِيحَة</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto"><b>«ءحد»</b></div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">أَحَد</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto"><b>«ءحن»</b></div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">I أَحِنَ ◌َ (أَحْن) على</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">إِحْنَة جـ. إِحَن</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto"><b>«ءخ»</b></div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">أَخُّ ، + آخْ</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">أَخُّ ، إِخُّ</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">أَخِيخَة</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto"><b>«ءخذ»</b></div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">I أَخَذَ ◌ُ (أَخْذ ، تَأْخَاذ) هـ ، ب مِن</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">أَخَذَ على خَاطِرِهِ</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">أَخَذَ وأَعْطَى مَع فُلَان</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">— يَقُول</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">— في</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">أَخَذَ ب</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">— هـ عَن</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">II أَخَّذَ ه</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">III آخَذَ (مُؤَاخَذَة) ه ب ، على</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">VIII ٱِتَّخَذَ هـ ، ه</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">X ٱِسْتَأْخَذَ</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">أَخْذ</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">أُخُذ ، أُخْذَة</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">آخِذَة</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">إِخَاذَة جـ. إِخَاذَات</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">تَأْخِيذ</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">أَخِيذ جـ. أَخْذَىٰ</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">أَخِيذَة</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">مَأْخَذ جـ. مَآخِذُ</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">مَأْخُوذ</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto"><b>«ءخر»</b></div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">II أَخَّرَ (تَأْخِير) هـ</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">V تَأَخَّرَ ، X ٱِسْتَأْخَرَ</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">آخَر مـ. أُخْرَىٰ ، آخَرُون</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">أُخْرَىٰ جـ. أُخَر ، أُخْرَيَات</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">أُخُر</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">أَخَرَة</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">أَخَرَةً ، بِأَخَرَةٍ</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">آخِر جـ. أَوَاخِر</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">آخِرَة جـ. أَوَاخِر</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">الْآخِر ، الْآخِرَة ، الْأُخرَى</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">أُخْرَوِيّ</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">أَخُور ، + يَاخُور</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">أَمِير أَخُور</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">في الْآخِر</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">عَن آخِرِهِم</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">أَخِير جـ. أَخِيرُون</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">أَخِيرًا</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">مُؤَخَّر</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">مُؤَخَّر</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">مُتَأَخِّر</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">نَخلَة مِئْخَار جـ. مَآخِيرُ</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto"><b>«ءخو»</b></div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">I أَخَا ◌ُ (أُخُوَّة) ه</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">II أَخَّىٰ ه</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">III آخَىٰ (مُؤَاخَوَة ، إِخَاء) ه</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">— بين</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">V تَأَخَّىٰ ه</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">— ، تَوَخَّى هـ</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">إِخَاء ، إِخَاوَة ، مُؤَاخَوَة ، أُخُوَّة ، + خُوَّة</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">أَخ (عوض اخو) + خَيّ جـ. إِخْوَة ، إِخْوَان</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">أُخْت جـ. أَخَوَات + خَيَّة جـ. خَيَّات</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">أَخِيَّة ، آخِيَّة جـ. أَوَاخِيّ ، أَوَاخٍ</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">أَخَوِيّ</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">+ أَخَوِيَّة</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">أُخْيُون</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto"><b>«ءد»</b></div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">I أَدَّ ◌ُ ◌ِ (أَدّ) ه</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">V تَأَدَّدَ</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">إِدّ ، إِدَّة جـ. إِدَد</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">أَدِيد</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto"><b>«ءدب»</b></div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">I أَدُبَ ◌ُ (أَدَب)</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">I أَدَبَ ◌ِ (أَدْب) ، IV آدَبَ (إِيدَاب) ه</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">II أَدَّبَ ه</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">V تَأَدَّبَ</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">— ، X ٱِسْتَأْدَبَ</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">أَدَب جـ. آدَاب</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">بَيْت الْأَدَب ، أَدَبْتَا</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">عِلْمُ الْأَدَب</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">أُدْبَة ، مَأْدَبَة ، مَأْدُبَة جـ. مَآدِبُ</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">تَأْدِيب</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">تَأْدِيبَات كَنَائِسِيَّة</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">أَدَبِيّ مـ. أَدَبِيَّة</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">العِلْم الْأَدَبِيّ ، اللَّاهُوت الْأَدَبِيّ</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">أَدِيب جـ. أُدَبَاءُ</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">مُؤَدِّب</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto"><b>«ءدر»</b></div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">I أَدِرَ ◌َ (أَدَر)</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">أَدَرَة ، أُدْرَة</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto"><b>«ءدل»</b></div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">I أَدَلَ ◌ِ (أَدْل)</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">— هـ</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">إِدْل</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto"><b>«ءدم»</b></div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">I أَدَمَ ◌ِ (أَدْم) ، VIII ٱِئْتَدَمَ</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">أَدَمَ ، IV آدَمَ (إِيدَام) بَيْن</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">I أَدِمَ ◌َ (أَدَم) ، أَدُمَ ◌ُ (أُدْمَة)</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">أُدْم ، إِدَام</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">أَدَم ، أَدَمَة</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">آدَم</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">آدَمِيّ</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">= آدَمِيَّات</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">آدَم جـ. أُدْم ، أُدْمَان مـ. أَدْمَاءُ ، أُدْمَانَة جـ. أُدْم</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">أَدَّام</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">آدَمِيَّة</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">أَدِيم جـ. أُدُم</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">إِيدَامَة جـ. أَيَادِيمُ</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto"><b>«ءدو»</b></div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">I أَدَا ◌ُ (أُدُوّ)</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">— لِفُلَانٍ (أَدْو)</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">VI تَآدَىٰ ب</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">أَدَاة جـ. أَدَوَات</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto"><b>«ءدي»</b></div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">I أَدَىٰ ◌ِ (أُدِيّ) ، II أَدَّىٰ (تَأْدِيَة) هـ إِلى</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">IV آدَىٰ (إِيدَاء) ه على</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">V تَأَدَّىٰ لَهُ مِن</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">— إِلى</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">X ٱِسْتَأْدَىٰ ه هـ</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">X ٱِسْتَأْدَىٰ ه على</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">أَدَاء</div><div class="col" lang="en" dir="ltr"></div></div>
 </div></body></html>
